fix(footer): wrap list items

--- a/src/sass/components/site-footer.scss
+++ b/src/sass/components/site-footer.scss
@@ -32,12 +32,15 @@
     padding: 0;
     margin-top: 0;
     display: flex;
+    flex-wrap: wrap;
   }
 
   &__links-list-item {
     &:not(:last-child) {
       margin-right: 10px;
+      margin-bottom: 0;
     }
+
     a {
       display: block;
       padding: 10px;
